save my models and test rf

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,88 +1048,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                              precision    recall  f1-score   support\n",
-      "\n",
-      "                                       album       0.00      0.00      0.00         3\n",
-      "                         archaeological find       0.98      0.99      0.99       171\n",
-      "                             audio recording       1.00      0.08      0.15        12\n",
-      "                                         bag       0.00      0.00      0.00         3\n",
-      "                                        book       0.78      0.73      0.75       111\n",
-      "                                    calendar       0.00      0.00      0.00         4\n",
-      "                                  caricature       0.00      0.00      0.00         8\n",
-      "                                 certificate       0.00      0.00      0.00         2\n",
-      "                                        coin       1.00      0.94      0.97        35\n",
-      "                                     country       0.00      0.00      0.00         4\n",
-      "                                   crate/box       0.00      0.00      0.00         2\n",
-      "                       design/drawing/sketch       0.97      0.98      0.98       160\n",
-      "                               digital image       1.00      0.83      0.91        41\n",
-      "                                 dish/vessel       0.00      0.00      0.00         4\n",
-      "                                    document       0.78      0.11      0.19        64\n",
-      "                                        doll       0.00      0.00      0.00         1\n",
-      "                                     drawing       0.00      0.00      0.00        13\n",
-      "                              folder/booklet       0.00      0.00      0.00         4\n",
-      "                                    graphics       0.75      0.41      0.53        44\n",
-      "                                  invitation       0.67      0.13      0.22        15\n",
-      "                                       jewel       1.00      0.33      0.50         3\n",
-      "                                  label/sign       0.00      0.00      0.00         8\n",
-      "                                      letter       0.86      0.82      0.84       102\n",
-      "            letter of honor/honorary address       0.00      0.00      0.00         7\n",
-      "                            letter, postcard       0.00      0.00      0.00         1\n",
-      "                                   magazines       0.92      0.55      0.69        22\n",
-      "                                  manuscript       0.59      0.51      0.55        88\n",
-      "             manuscript, musical composition       0.33      0.12      0.18         8\n",
-      "                     manuscript, sheet music       1.00      0.40      0.57         5\n",
-      "                                       medal       1.00      0.59      0.74        17\n",
-      "                                 music sheet       0.97      0.58      0.72        52\n",
-      "                          musical instrument       0.00      0.00      0.00         8\n",
-      "                                   newspaper       0.00      0.00      0.00        14\n",
-      "                                       notes       0.00      0.00      0.00         5\n",
-      "                                       photo       0.49      0.94      0.65       370\n",
-      "                              photo negative       0.74      0.79      0.76       267\n",
-      "                             photo, postcard       1.00      0.11      0.20         9\n",
-      "                       photographic material       1.00      0.20      0.33         5\n",
-      "photographic negative, photographic negative       1.00      1.00      1.00         1\n",
-      "                                        plan       0.81      0.77      0.79       114\n",
-      "                                    postcard       0.91      0.50      0.65        20\n",
-      "                                      poster       0.89      0.89      0.89       120\n",
-      "                               printed notes       0.00      0.00      0.00         3\n",
-      "                    script, song/vocal music       0.80      0.80      0.80        40\n",
-      "                                   sculpture       0.00      0.00      0.00         7\n",
-      "                                        seal       0.00      0.00      0.00         7\n",
-      "                                seal/imprint       1.00      0.89      0.94        35\n",
-      "                                 sheet/linen       0.00      0.00      0.00         4\n",
-      "                                       slide       1.00      0.11      0.20         9\n",
-      "                                 small print       1.00      0.04      0.08        23\n",
-      "                                        suit       0.00      0.00      0.00         4\n",
-      "                                 tape/ribbon       0.00      0.00      0.00         3\n",
-      "                                    telegram       1.00      0.62      0.77         8\n",
-      "\n",
-      "                                    accuracy                           0.73      2090\n",
-      "                                   macro avg       0.50      0.32      0.35      2090\n",
-      "                                weighted avg       0.74      0.73      0.70      2090\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
@@ -1141,6 +1062,27 @@
     "\n",
     "report = classification_report(y_test, preds)\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/nlp.ipynb Cell 39\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#Y103sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m clf\u001b[39m.\u001b[39msave_model(\u001b[39m'\u001b[39m\u001b[39mmodels/curie_model.json\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'clf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "clf.save_model('models/curie_model.json')"
    ]
   }
  ],
