--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -138,6 +138,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bst.save_model('models/xgboost_full.json')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,51 +159,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = test_prep.drop('type', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = bst.predict(test_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission = pd.DataFrame({'id': test_set.index ,'type': bst.predict(test_set)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_lookup = pd.read_csv('data/type_lookup.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_set = test_prep.drop('type', axis=1)\n",
+    "results = bst.predict(test_set)\n",
+    "submission = pd.DataFrame({'id': test_set.index ,'type': bst.predict(test_set)})\n",
+    "type_lookup = pd.read_csv('data/type_lookup.csv')\n",
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
     "submission.to_csv('data/submission_xgboost_full.csv', index=False)"
    ]
   },
