repaired csv and dropped NaNs

--- a/prep_final.ipynb
+++ b/prep_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [18], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m pyplot \u001b[39mas\u001b[39;00m plt\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdeep_translator\u001b[39;00m \u001b[39mimport\u001b[39;00m GoogleTranslator\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m \n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m isnan\n",
+      "Cell \u001b[1;32mIn [5], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m pyplot \u001b[39mas\u001b[39;00m plt\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdeep_translator\u001b[39;00m \u001b[39mimport\u001b[39;00m GoogleTranslator\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m \n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m isnan\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'deep_translator'"
      ]
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,22 +155,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "# delete too sparse one-hot endcoded features"
-=======
     "# Nan ->0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0\n",
+      "              ks  musealia_seria_nr  musealia_queue_nr  collection_queue_nr  \\\n",
+      "id                                                                            \n",
+      "232170     118.0            12150.0              115.0                 44.0   \n",
+      "2251378    102.0            12584.0               19.0                  1.0   \n",
+      "2070466      0.0                0.0                0.0                 52.0   \n",
+      "4085096  41691.0                0.0                0.0                  0.0   \n",
+      "2697904    238.0             9424.0                0.0                  1.0   \n",
+      "...          ...                ...                ...                  ...   \n",
+      "3035795     10.0             5429.0                0.0                  3.0   \n",
+      "2765287      0.0            12656.0               13.0                 13.0   \n",
+      "2416520    429.0             8293.0                0.0                435.0   \n",
+      "2327407    580.0            29884.0                0.0               5037.0   \n",
+      "2781747  13349.0                0.0                0.0                  3.0   \n",
+      "\n",
+      "         element_count            type source  material_Polish  \\\n",
+      "id                                                               \n",
+      "232170             1.0           medal  train                0   \n",
+      "2251378            1.0           photo  train                0   \n",
+      "2070466            1.0           photo  train                0   \n",
+      "4085096            1.0  photo negative  train                0   \n",
+      "2697904            1.0          letter  train                0   \n",
+      "...                ...             ...    ...              ...   \n",
+      "3035795            1.0               0   test                0   \n",
+      "2765287            1.0               0   test                0   \n",
+      "2416520            1.0               0   test                0   \n",
+      "2327407            1.0               0   test                0   \n",
+      "2781747            1.0               0   test                0   \n",
+      "\n",
+      "         material_RC Photo Paper  material_acetate cellulose film  ...  \\\n",
+      "id                                                                 ...   \n",
+      "232170                         0                                0  ...   \n",
+      "2251378                        0                                0  ...   \n",
+      "2070466                        0                                0  ...   \n",
+      "4085096                        0                                0  ...   \n",
+      "2697904                        0                                0  ...   \n",
+      "...                          ...                              ...  ...   \n",
+      "3035795                        0                                0  ...   \n",
+      "2765287                        0                                0  ...   \n",
+      "2416520                        0                                0  ...   \n",
+      "2327407                        0                                0  ...   \n",
+      "2781747                        0                                0  ...   \n",
+      "\n",
+      "         event_type_has_a_value  musealia_additional_nr_has_a_value  \\\n",
+      "id                                                                    \n",
+      "232170                        1                                   0   \n",
+      "2251378                       1                                   0   \n",
+      "2070466                       0                                   0   \n",
+      "4085096                       1                                   0   \n",
+      "2697904                       0                                   0   \n",
+      "...                         ...                                 ...   \n",
+      "3035795                       1                                   0   \n",
+      "2765287                       1                                   0   \n",
+      "2416520                       1                                   0   \n",
+      "2327407                       0                                   0   \n",
+      "2781747                       1                                   0   \n",
+      "\n",
+      "         is_original_has_a_value  class_has_a_value  museum_abbr_has_a_value  \\\n",
+      "id                                                                             \n",
+      "232170                         1                  0                        1   \n",
+      "2251378                        0                  0                        1   \n",
+      "2070466                        0                  0                        1   \n",
+      "4085096                        1                  0                        1   \n",
+      "2697904                        1                  0                        1   \n",
+      "...                          ...                ...                      ...   \n",
+      "3035795                        1                  0                        1   \n",
+      "2765287                        1                  0                        1   \n",
+      "2416520                        1                  0                        1   \n",
+      "2327407                        0                  0                        1   \n",
+      "2781747                        1                  0                        1   \n",
+      "\n",
+      "         color_has_a_value  collection_mark_has_a_value  state_has_a_value  \\\n",
+      "id                                                                           \n",
+      "232170                   1                            1                  1   \n",
+      "2251378                  0                            1                  1   \n",
+      "2070466                  0                            1                  1   \n",
+      "4085096                  0                            1                  1   \n",
+      "2697904                  0                            1                  1   \n",
+      "...                    ...                          ...                ...   \n",
+      "3035795                  0                            1                  1   \n",
+      "2765287                  0                            1                  1   \n",
+      "2416520                  0                            1                  1   \n",
+      "2327407                  0                            1                  1   \n",
+      "2781747                  0                            1                  1   \n",
+      "\n",
+      "         technique_has_a_value  material_has_a_value  \n",
+      "id                                                    \n",
+      "232170                       0                     1  \n",
+      "2251378                      0                     1  \n",
+      "2070466                      0                     0  \n",
+      "4085096                      0                     1  \n",
+      "2697904                      1                     1  \n",
+      "...                        ...                   ...  \n",
+      "3035795                      1                     1  \n",
+      "2765287                      0                     0  \n",
+      "2416520                      0                     1  \n",
+      "2327407                      0                     1  \n",
+      "2781747                      1                     1  \n",
+      "\n",
+      "[20000 rows x 809 columns]\n"
      ]
     }
    ],
@@ -181,105 +277,14 @@
     " #   if col.hasnan:\n",
     "  #      data[col] = data[col].replace(np.nan, 0)\n",
     "\n",
-    "data = data.isnull().replace(np.nan, 0)\n",
-    "print (data.isnull().sum().sum())"
+    "data = data.replace(np.nan, 0)\n",
+    "print (data.isnull().sum().sum())\n",
+    "print (data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv('data/prep.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# resplit test/train\n"
->>>>>>> 2622a0381e7f79233bae9782a39c8be450af29e2
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
-   "execution_count": 20,
->>>>>>> 2622a0381e7f79233bae9782a39c8be450af29e2
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import helpers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80 columns found that start with technique_\n",
-      "80 columns found that start with material_\n",
-      "149 columns found that start with location_\n"
-     ]
-    }
-   ],
-   "source": [
-    "tech = helpers.col_collection(data, 'technique_')\n",
-    "mat = helpers.col_collection(data, 'material_')\n",
-    "loc = helpers.col_collection(data, 'location_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = tech + mat + loc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "too_few = []\n",
-    "\n",
-    "for col in cols:\n",
-    "    if data[col].sum() < 2:\n",
-    "        too_few.append(col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(columns=too_few, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,9 +309,7 @@
   },
   {
    "cell_type": "code",
-=======
->>>>>>> 2622a0381e7f79233bae9782a39c8be450af29e2
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
