--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -1050,7 +1050,86 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              precision    recall  f1-score   support\n",
+      "\n",
+      "                                       album       0.00      0.00      0.00         3\n",
+      "                         archaeological find       0.98      0.99      0.99       171\n",
+      "                             audio recording       1.00      0.08      0.15        12\n",
+      "                                         bag       1.00      0.33      0.50         3\n",
+      "                                        book       0.79      0.79      0.79       111\n",
+      "                                    calendar       0.00      0.00      0.00         4\n",
+      "                                  caricature       0.00      0.00      0.00         8\n",
+      "                                 certificate       0.00      0.00      0.00         2\n",
+      "                                        coin       1.00      0.94      0.97        35\n",
+      "                                     country       0.00      0.00      0.00         4\n",
+      "                                   crate/box       0.00      0.00      0.00         2\n",
+      "                       design/drawing/sketch       0.97      0.98      0.98       160\n",
+      "                               digital image       1.00      0.83      0.91        41\n",
+      "                                 dish/vessel       0.00      0.00      0.00         4\n",
+      "                                    document       1.00      0.11      0.20        64\n",
+      "                                        doll       0.00      0.00      0.00         1\n",
+      "                                     drawing       0.00      0.00      0.00        13\n",
+      "                              folder/booklet       0.00      0.00      0.00         4\n",
+      "                                    graphics       0.83      0.43      0.57        44\n",
+      "                                  invitation       0.67      0.13      0.22        15\n",
+      "                                       jewel       1.00      0.33      0.50         3\n",
+      "                                  label/sign       0.00      0.00      0.00         8\n",
+      "                                      letter       0.89      0.83      0.86       102\n",
+      "            letter of honor/honorary address       0.00      0.00      0.00         7\n",
+      "                            letter, postcard       0.00      0.00      0.00         1\n",
+      "                                   magazines       0.92      0.50      0.65        22\n",
+      "                                  manuscript       0.62      0.58      0.60        88\n",
+      "             manuscript, musical composition       0.50      0.12      0.20         8\n",
+      "                     manuscript, sheet music       1.00      0.20      0.33         5\n",
+      "                                       medal       1.00      0.59      0.74        17\n",
+      "                                 music sheet       0.96      0.52      0.67        52\n",
+      "                          musical instrument       0.00      0.00      0.00         8\n",
+      "                                   newspaper       0.00      0.00      0.00        14\n",
+      "                                       notes       0.00      0.00      0.00         5\n",
+      "                                       photo       0.50      0.95      0.65       370\n",
+      "                              photo negative       0.73      0.79      0.76       267\n",
+      "                             photo, postcard       1.00      0.11      0.20         9\n",
+      "                       photographic material       1.00      0.20      0.33         5\n",
+      "photographic negative, photographic negative       1.00      1.00      1.00         1\n",
+      "                                        plan       0.80      0.78      0.79       114\n",
+      "                                    postcard       0.91      0.50      0.65        20\n",
+      "                                      poster       0.90      0.88      0.89       120\n",
+      "                               printed notes       0.00      0.00      0.00         3\n",
+      "                    script, song/vocal music       0.82      0.78      0.79        40\n",
+      "                                   sculpture       0.00      0.00      0.00         7\n",
+      "                                        seal       0.00      0.00      0.00         7\n",
+      "                                seal/imprint       0.97      0.83      0.89        35\n",
+      "                                 sheet/linen       0.00      0.00      0.00         4\n",
+      "                                       slide       1.00      0.11      0.20         9\n",
+      "                                 small print       1.00      0.04      0.08        23\n",
+      "                                        suit       0.00      0.00      0.00         4\n",
+      "                                 tape/ribbon       0.00      0.00      0.00         3\n",
+      "                                    telegram       1.00      0.50      0.67         8\n",
+      "\n",
+      "                                    accuracy                           0.73      2090\n",
+      "                                   macro avg       0.52      0.32      0.35      2090\n",
+      "                                weighted avg       0.75      0.73      0.70      2090\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
